tests/errors/UnknownIdentifier.java
class UnknownIdentifier
{
    public static void main(String[] a)
    {
		System.out.println(new Test().exec());
    }
}

class Test
{
	public int exec()
	{
		a = 1;
		
		return 0;
	}
}
